--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -8,28 +8,35 @@
 mat-sidenav-container {
   height: 100%;
 }
+
 mat-sidenav, mat-sidenav-content {
   padding: 1rem;
 }
+
 mat-sidenav {
   background-color: white;
   width: 300px;
   max-width: 100%;
 }
+
 #logo {
   width: 180px;
   float: left;
 }
+
 #logo2 {
   width: 230px;
   float: right;
 }
+
 mat-nav-list {
   margin-top: 3rem;
 }
+
 #invoices, #sair {
   color: black;
 }
+
 #fecharmenu {
   float: right;
   text-align: right;
@@ -40,23 +47,40 @@ body {
     width: 100%;
     background-color: #fff;
 }
+
 #content {
     padding: 5px;
 }
+
 #abrirmenu {
   float: left;
   position: fixed;
   z-index: 1;
 }
-#marca, #colecao, #repres, #cnpj, #botao-buscar, #filtro {
-  width: 100%;
+
+#marca, #colecao, #repres, #ordem {
+  width: 48%;
 }
-#marca, #botao-buscar, #filtro {
-  margin-top: 2rem;
+
+#colecao, #ordem {
+  margin-left: 4%;
 }
-#tabela {
-  width: 100%;
-  height: 500px;
+
+#botao-buscar {
+  width: 100%
+}
+
+#marca, #colecao, #botao-buscar {
+  margin-top: 3rem;
+}
+
+#razao-social {
+  width: 55%;
+}
+
+#cnpj-codigo {
+  width: 40%;
+  margin-left: 4%;
 }
 
 /* ============================ DROPDOWNS =================================== */
