--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -6,13 +6,10 @@
     <mat-toolbar><a href="#"><img style="width: 100%;" src="../../assets/logo.png"></a></mat-toolbar>
     <mat-nav-list>
       <a href="#">
-        <mat-list-item id="sair">Sair</mat-list-item>
+        <mat-list-item id="sair"><mat-icon>home</mat-icon> Inicio</mat-list-item>
     </a>
     <a href="/invoices">
-        <mat-list-item id="invoices">Faturamentos</mat-list-item>
-    </a>
-    <a href="/clientes">
-        <mat-list-item id="clientes">Consulta de Clientes</mat-list-item>
+        <mat-list-item id="invoices"><mat-icon>monetization_on</mat-icon> Faturamentos</mat-list-item>
     </a>
     </mat-nav-list>
   </mat-sidenav>
