--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -51,27 +51,47 @@
                 </mat-select>
             </mat-form-field>
 
+
+
+
+
+
+
+            
             <!------------------------ CAMPO RAZÃO SOCIAL ------------------------->
             <mat-form-field id="razao-social" (keyup)="companyName = $event.target.value" (keyup)="buscarClientes()">
                 <mat-label>Razão Social</mat-label>
                 <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteRazao">
                 <mat-autocomplete #autoCompleteRazao="matAutocomplete" [displayWith]="displayRazaoFn()">
                     <mat-option *ngFor="let cliente of clientes" [value]="cliente.customer_name">
-                        {{ cliente.customer_name }} - {{ cliente.customerFab_Id }}
+                        {{ cliente.customer_name }} 
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
 
-            <!---------------------- CAMPO CNPJ/CÓDIGO ------------------------->
-            <mat-form-field id="cnpj-codigo" (keyup)="companyDoc = $event.target.value" (keyup)="buscarClientes()">
-                <mat-label>CNPJ / Código</mat-label>
+            <!---------------------- CAMPO CNPJ ------------------------->
+            <mat-form-field id="cnpj" (keyup)="companyDoc = $event.target.value" (keyup)="buscarClientes()">
+                <mat-label>CNPJ</mat-label>
                 <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteCnpj">
-                <mat-autocomplete #autoCompleteCnpj="matAutocomplete" [displayWith]="displayCnpjFn()">
-                    <mat-option *ngFor="let cliente of clientes" [value]="cliente.company_doc">
-                        {{ cliente.company_doc }}
-                    </mat-option>
-                </mat-autocomplete>
             </mat-form-field>
+
+
+
+
+
+
+
+
+            <!---------------------- CAMPO CÓDIGO ------------------------->
+            <mat-form-field id="codigo" (keyup)="customerFabId = $event.target.value" (keyup)="buscarClientes()">
+                <mat-label>Código</mat-label>
+                <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteCodigo">
+            </mat-form-field>
+
+
+
+
+
 
 
             <!---------------------- BUTTON PESQUISAR CNPJ --------------------->
