--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -61,10 +61,10 @@
             <!------------------------ CAMPO RAZÃO SOCIAL ------------------------->
             <mat-form-field id="razao-social" (keyup)="companyName = $event.target.value" (keyup)="buscarClientes()">
                 <mat-label>Razão Social</mat-label>
-                <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteRazao">
-                <mat-autocomplete #autoCompleteRazao="matAutocomplete" [displayWith]="displayRazaoFn()">
-                    <mat-option *ngFor="let cliente of clientes" [value]="cliente.customer_name">
-                        {{ cliente.customer_name }} 
+                <input type="text" matInput [matAutocomplete]="autoCompleteRazao">
+                <mat-autocomplete #autoCompleteRazao="matAutocomplete" (optionSelected)="mudarCustomerFabId($event)" [displayWith]="displayRazaoFn()">
+                    <mat-option *ngFor="let cliente of clientes" [value]="cliente.customerFab_Id">
+                        {{ cliente.customer_name }} - {{ cliente.customerFab_Id }}
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
@@ -72,7 +72,7 @@
             <!---------------------- CAMPO CNPJ ------------------------->
             <mat-form-field id="cnpj" (keyup)="companyDoc = $event.target.value" (keyup)="buscarClientes()">
                 <mat-label>CNPJ</mat-label>
-                <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteCnpj">
+                <input type="text" matInput [matAutocomplete]="autoCompleteCnpj">
             </mat-form-field>
 
 
@@ -85,7 +85,7 @@
             <!---------------------- CAMPO CÓDIGO ------------------------->
             <mat-form-field id="codigo" (keyup)="customerFabId = $event.target.value" (keyup)="buscarClientes()">
                 <mat-label>Código</mat-label>
-                <input type="text" matInput [formControl]="myControl" [matAutocomplete]="autoCompleteCodigo">
+                <input type="text" matInput [matAutocomplete]="autoCompleteCodigo">
             </mat-form-field>
 
 
