--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -95,8 +95,8 @@
     (click)="company_doc = cnpjDigitado"
     (click)="buscarInvoices()">
     <i class="material-icons right">search</i>BUSCAR</button>
-
-    <mat-card *ngIf="consultado" style="margin: 15px 0; text-align: center;">
+    
+    <mat-card id="cardTotais" *ngIf="consultado">
         <mat-card-title>
             <mat-icon>poll</mat-icon> Totais
         </mat-card-title>
@@ -107,22 +107,20 @@
         </mat-card-content>
     </mat-card>
     
-    <mat-card *ngFor="let invoice of invoices" class="mat-elevation-z8" style="margin: 15px 0;">
-        <mat-card-title style="text-align: center; margin-bottom: 15px"><mat-icon>account_box</mat-icon> {{ invoice.customer_name }} </mat-card-title>
-        <div style="width: 100%;">
-            <mat-card-content>
-                <div style="font-size: medium; text-align: center;"><strong>NF: </strong>{{ invoice.invoice }}  - {{ invoice.dt_invoice }}</div>
-                <div style="font-size: small; text-align: center; margin: 15px 0"><strong>Ped Linx:</strong> {{ invoice.orderFactory_Id }}<strong>Ped Wise:</strong> {{ invoice.order_Id }}</div>
-                <div id="card-subdiv"><strong>Ped:<br></strong>{{ invoice.total_quantity | number:'1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>Emb:<br></strong>{{ invoice.packed_quantity | number:'1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>Fat:<br></strong>{{ invoice.total_quantity_invoiced | number:'1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>%<br></strong>{{ invoice.total_quantity_invoiced / invoice.total_quantity * 100 | number: '1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
-                <div id="card-subdiv"><strong>%<br></strong>{{ invoice.total_price_invoiced / invoice.total_price * 100 | number: '1.0-0' | replace:',':'.' }}</div>
-            </mat-card-content>
-        </div>
+    <mat-card id="cardsFaturamentos" *ngFor="let invoice of invoices" class="mat-elevation-z8">
+        <mat-card-title id="cardsFaturamentosGrande"><mat-icon>account_box</mat-icon> {{ invoice.customer_name }} </mat-card-title>
+        <mat-card-content>
+            <div id="cardsFaturamentosMedio"><strong>NF: </strong>{{ invoice.invoice }}  - {{ invoice.dt_invoice }}</div>
+            <div id="cardsFaturamentosMedio"><strong>Ped Linx:</strong> {{ invoice.orderFactory_Id }}<strong>Ped Wise:</strong> {{ invoice.order_Id }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Ped:<br></strong>{{ invoice.total_quantity | number:'1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Emb:<br></strong>{{ invoice.packed_quantity | number:'1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Fat:<br></strong>{{ invoice.total_quantity_invoiced | number:'1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>%<br></strong>{{ invoice.total_quantity_invoiced / invoice.total_quantity * 100 | number: '1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+            <div id="cardsFaturamentosPequeno"><strong>%<br></strong>{{ invoice.total_price_invoiced / invoice.total_price * 100 | number: '1.0-0' | replace:',':'.' }}</div>
+        </mat-card-content>
         <mat-card-footer style="text-align: center;">
             <button mat-raised-button style="background-color: black; color:white; margin: 15px;"><mat-icon>remove_red_eye</mat-icon></button>
         </mat-card-footer>
