--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -87,15 +87,38 @@ body {
   margin-left: 2%;
 }
 
+#cardsFaturamentos {
+  float: left;
+  width: 100%;
+  margin: 2%;
+}
+
+
 /* ============================ DROPDOWNS =================================== */
 
 /* =========================== CARDS ============================== */
 
-#card-subdiv {
+#cardTotais {
+  text-align: center;
+  margin: 2%;
+}
+
+#cardsFaturamentos {
+  width: 100%;
+  text-align: center;
+}
+
+#cardsFaturamentosGrande {
+  font-size: large;
+}
+#cardsFaturamentosMedio {
+  font-size: medium;
+}
+
+#cardsFaturamentosPequeno {
   font-size: x-small;
   width: 25%;
   float: left;
-  text-align: center;
 }
 
 /* ========================== BREAKPOINTS - REPONSIVIDADE ========================== */
