--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -87,24 +87,19 @@ body {
   margin-left: 2%;
 }
 
-#cardsFaturamentos {
-  float: left;
-  width: 100%;
-  margin: 2%;
-}
-
-
 /* ============================ DROPDOWNS =================================== */
 
 /* =========================== CARDS ============================== */
 
 #cardTotais {
   text-align: center;
-  margin: 2%;
+  margin: 1%;
+  padding: 1%;
 }
 
 #cardsFaturamentos {
-  width: 100%;
+  margin: 1%;
+  padding: 1%;
   text-align: center;
 }
 
@@ -149,6 +144,18 @@ body {
   
   #codigo {
     margin-left: 2%;
+  }
+
+  #cardTotais {
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #cardsFaturamentos {
+    float: left;
+    width: 45%;
+    margin: 1%;
   }
 
 }
